# Projektgruppe_Hypersuccint_Trees

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  FarzanMunro.cpp  FarzanMunro.h  README.md  TreeElement.cpp  TreeElement.h  TreeStructure.cpp  TreeStructure.h  doxyfile  main.cpp
documentation/: Bericht_PreV2.tex  Pres_HST.tex  references.bib
documentation/images/: graph_gen.py
documentation/results/: dblp1.csv  dblp3.csv  dblp4.csv  dblp5.csv  dblpWR10.csv  resultsDBLP.csv  testResults1.csv  testResults10.csv  testResults2.csv  testResults3.csv  testResults4.csv  testResults5.csv  testResults6.csv  testResults7.csv  testResults8.csv  testResults9.csv
example/: CMakeLists.txt  example.cpp
example_service/: CMakeLists.txt  catalog.xml  example_service.cpp  hyperTreeVisualization.cpp  hyperTreeVisualization.h  treeAlex.xml  treeNath.xml  xml_reader.cpp  xml_reader.h
include/pht/: bitvector.h  bitvector_utils.h  c_wrapper.h  cached_function.h  farzan_munro.h  hst_node.h  hst_output.cpp  hst_output.h  huffman.h  hypersuccinct_generator.h  hypersuccinct_tree.h  hypersuccinct_tree_factory.h  hypersuccinct_tree_factory2.h  list_utils.h  logger.h  node.h  precomputed_function.h  pyhelper.h  timed_cached_function.h  timer.h  unordered_tree.h  visualize.h  xml_reader.h
python/: CMakeLists.txt  gui.py  pht_hst.pxd  pht_hst.pyx  pht_hst_factory.pxd  pht_hst_node.pxd  pht_timer.cpp  pht_timer.pxd  pht_timer.pyx  pht_unordered_tree.pxd  pht_xml_reader.pxd  run_py.bat  setup.py  setup.py.in  ui.py  visualize.py
resources/: TreeNathX.xml  treeNath2.xml  treeNath3.xml  treeNath4.xml
src/: CMakeLists.txt  bitvector.cpp  bitvector_utils.cpp  hst_node.cpp  hst_output.cpp  hypersuccinct_tree.cpp  hypersuccinct_tree_factory.cpp  hypersuccinct_tree_queries.cpp  logger.cpp  timer.cpp  xml_reader.cpp
tests/: CMakeLists.txt  bitvector_test.cpp  bitvector_utils_test.cpp  caching_test.cpp  farzan_munro_test.cpp  huffman_test.cpp  hypersuccinct_tree_factory_test.cpp  hypersuccinct_tree_test.cpp  list_utils_test.cpp  node_test.cpp  runtime_test.cpp  unordered_tree_test.cpp
