file(GLOB example_src CONFIGURE_DEPENDS "*.h" "*.hpp" "*.c" "*.cc" "*.cpp")
add_executable(example ${example_src})
set_target_properties(example PROPERTIES LINKER_LANGUAGE CXX)
target_compile_features(example PRIVATE cxx_std_17)
target_link_libraries(example PRIVATE pst_lib irrxml)
add_custom_command(TARGET example POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_SOURCE_DIR}/catalog.xml" "${CMAKE_CURRENT_BINARY_DIR}/Debug/catalog.xml")
add_custom_command(TARGET example POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_SOURCE_DIR}/catalog.xml" "${CMAKE_CURRENT_BINARY_DIR}/Release/catalog.xml")