include(GoogleTest)
file(GLOB test_src CONFIGURE_DEPENDS "*.c" "*.cc" "*.cpp")
add_executable(pst_test ${test_src})
target_include_directories(pst_test PUBLIC "${CMAKE_SOURCE_DIR}/include")
set_target_properties(pst_test PROPERTIES LINKER_LANGUAGE CXX)
target_compile_features(pst_test PRIVATE cxx_std_17)
target_link_libraries(pst_test PRIVATE pst_lib gtest gmock gtest_main gmock_main)
gtest_discover_tests(pst_test)
#add_custom_command(TARGET pst_test COMMENT "Run tests" POST_BUILD COMMAND pst_test)